ZGC: Testing