@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -19,26 +19,21 @@
  * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
  * or visit www.oracle.com if you need additional information or have any
  * questions.
+ *
  */
+
+import java.io.IOException;
 
 /*
- * @test
- * @summary Test checks output displayed with jstat -gccause.
- *          Test scenario:
- *          test forces debuggee application eat ~70% of heap and runs jstat.
- *          jstat should show actual usage of old gen (OC/OU ~= old gen usage).
- * @requires vm.opt.ExplicitGCInvokesConcurrent != true
- * @requires vm.gc != "Z"
- * @modules java.base/jdk.internal.misc
- * @library /test/lib
- * @library ../share
- * @run main/othervm -XX:+UsePerfData -XX:MaxNewSize=4m -XX:MaxHeapSize=128M -XX:MaxMetaspaceSize=128M GcCauseTest02
+ * @test TestGCBasherWithZ
+ * @key gc stress
+ * @requires vm.gc.Z
+ * @requires vm.flavor == "server" & !vm.emulatedClient
+ * @summary Stress ZGC
+ * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx384m -server -XX:+UnlockExperimentalVMOptions -XX:+UseZGC TestGCBasherWithZ 120000
  */
-import utils.*;
-
-public class GcCauseTest02 {
-
-    public static void main(String[] args) throws Exception {
-        new GarbageProducerTest(new JstatGcCauseTool(ProcessHandle.current().pid())).run();
+public class TestGCBasherWithZ {
+    public static void main(String[] args) throws IOException {
+        TestGCBasher.main(args);
     }
 }
